Initial html layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Inglorious Cookies - Menu</title>
+    </head>
+    <body>
+        <header>
+            <h1>Inglorious Cookies - Menu</h1>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+            </ul>
+        </nav>
+
+        <main>
+            <p>Under Construction...</p>
+        </main>
+
+        <footer>
+            <p>©Copyright 2050 by Inglorious Cookies. All rights reserved.</p>
+        </footer>
+    </body>
+</html>
