--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Inglorious Cookies - Menu</h1>
+            <img src="images/inglorious-logo.png" />
         </header>
 
         <nav>
