Added 150g cookie selection

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width, , initial-scale=1" />
         <title>Inglorious Cookies - Menu</title>
+        <link rel="stylesheet" href="css/index.css" type="text/css"/>
     </head>
     <body>
         <header>
@@ -18,6 +19,44 @@
 
         <main>
             <p>Under Construction...</p>
+
+            <div class="menu-item-table-wrapper">
+                <table class="menu-item-table">
+                    <tr>
+                        <th class="menu-category-header">150g Cookie Selection</th>
+                        <th>per pc</th>
+                        <th>in 3's</th>
+                        <th>in 6's</th>
+                    </tr>
+                    <tr class="cookie-selection-tr">
+                        <td class="menu-item-description-td">
+                            <h4>Aldo</h4>
+                            <p>Walnut Chocolate Chip</p>
+                        </td>
+                        <td class="price-td">&#8369; 160.00</td>
+                        <td class="price-td">&#8369; 465.00</td>
+                        <td class="price-td">&#8369; 935.00</td>
+                    </tr>
+                    <tr class="cookie-selection-tr">
+                        <td class="menu-item-description-td">
+                            <h4>Marcel</h4>
+                            <p>Double Chocolate Chip</p>
+                        </td>
+                        <td class="price-td">&#8369; 160.00</td>
+                        <td class="price-td">&#8369; 465.00</td>
+                        <td class="price-td">&#8369; 935.00</td>
+                    </tr>
+                    <tr class="cookie-selection-tr">
+                        <td class="menu-item-description-td">
+                            <h4>Melanie</h4>
+                            <p>Triple Chocolate Chip</p>
+                        </td>
+                        <td class="price-td">&#8369; 160.00</td>
+                        <td class="price-td">&#8369; 465.00</td>
+                        <td class="price-td">&#8369; 935.00</td>
+                    </tr>
+                </table>
+            </div>
         </main>
 
         <footer>
